# EvidenceAuthorizationFromEIDAS

./: .env  .gitignore  Dockerfile  README.md  bom.json  licenses.md  main.py  mypy.ini  pyproject.toml  redis_keys.py  requirements.txt
.github/workflows/: ci-security-quality.yml  code_quality.yml  docker-publish.yml
Models/: Base.py  Person.py  ResponseEvidences.py
docs/: flask-migration-notes.md  kubernetes-install.md  service-overview.md
lib/: ICEI.py  MessageChecker.py  NS.py  Person.py  PersonRequestService.py  RedirectService.py  UseRedis.py  WaitEvent.py  action_token.py  eidas_autofill_service.py  evidence_view_model.py  exception.py  preview_service.py
static/: base.css  evidences.js  view_waiting.css
templates/: evidences.html  invalid_link.html  login.html  pdf.html  redirect_to_preview.html  view_waiting.html  xml.html
tests/: conftest.py  eIDAS-id-data-test.csv  test_action_token.py  test_icei.py  test_main_endpoints.py  test_main_view_endpoints.py  test_message_checker.py  test_person_request_service.py  test_redirect_service.py
