[project]
name = "evidence-authorization-from-eidas"
version = "0.1.0"
description = "FastAPI service for OOTS authorization and evidence preview"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.138.0",
  "uvicorn>=0.49.0",
  "jinja2>=3.1.4",
  "redis>=8.0.0",
  "lxml>=5.3.0",
  "pyRegRep>=13",
  "xmltodict>=0.13.0",
  "multipart>=1.3.1",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "mypy>=1.13.0",
  "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
include = ["lib*", "Models*"]
exclude = ["static*", "templates*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["main.py", "lib", "tests"]
ignore_missing_imports = true
pretty = true
show_error_codes = true
exclude = "tests/~.*\\.py$"
explicit_package_bases = true

[tool.ruff]
extend-exclude = ["tests/~*.py"]
